# jornada_dados_crud_merc_livre

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  crud.py  database.py  main.py  models.py  requirements.txt  router.py  schemas.py
backend/database/: database.py
backend/models/: product.py
