[tool.poetry]
name = "jornada-dados-crud-merc-livre"
version = "0.1.0"
description = ""
authors = ["Eduardo Quelotti <eduardoquelotti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
pydantic = {extras = ["email"], version = "^2.8.2"}
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
